--- a/languages/ml/haskell/videos.org
+++ b/languages/ml/haskell/videos.org
@@ -434,6 +434,24 @@ source/slides https://github.com/mzero/haskell-amuse-bouche
       <|> showForYear (year p)  -- Int -> Maybe String
   #+end_src
 
+* 13 | Sed implementation in Haskell | nixcasts
+source https://github.com/connermcd/sed
+** 1
+
+#+begin_src haskell
+  module Sed where
+
+  import qualified Data.Text as T
+  import qualified Data.Text.IO. as TIO
+
+  sed :: T.Text -> T.Text
+  sed t = t
+
+  main :: IO ()
+  main = TIO.interact sed
+#+end_src
+
+** 2
 * TODO 12 | Lens, Folds, and Traversals           | Edward Kmett
 
 video https://www.youtube.com/watch?v=cefnmjtAolY
