--- a/languages/sh/bash.org
+++ b/languages/sh/bash.org
@@ -142,3 +142,15 @@ From man
 #+begin_src bash
   die() { echo $1 >&2; exit 1; } # some_command || die "oh no!"
 #+end_src
+
+#+begin_src bash
+  for cmd in sgr0 bold; do
+    tput $cmd
+    for i in $(seq 0 7); do
+      for j in $(seq 0 7); do
+        tput setaf $i; tput setab $j; echo -n " $i,$j "
+      done
+      tput sgr0; echo; tput $cmd
+    done
+  done
+#+end_src
