--- a/languages/ml/ocaml/tools/utop.org
+++ b/languages/ml/ocaml/tools/utop.org
@@ -1,3 +1,5 @@
+- #show FN
+- #require "module_name";;
 - larger default prints
   https://www.reddit.com/r/ocaml/comments/72nlch/utop_disable_truncation/
   #print_lengh N;;
