--- a/languages/smalltalk.org
+++ b/languages/smalltalk.org
@@ -1,3 +1,4 @@
+- By the Bluebook implementation of Smalltalk-80  https://github.com/dbanay/Smalltalk
 - Libraries https://github.com/pharo-open-documentation/awesome-pharo
 - Playlist: Smalltalk FIUBA
   https://www.youtube.com/playlist?list=PLjAkTa6GqXRdYkY2cWXTRWTYy7A0gms13
