--- a/languages/sh/sed/self.org
+++ b/languages/sh/sed/self.org
@@ -90,20 +90,24 @@ eg: "/Sebastopol/s/CA/California/g" performs the substituion ONLY on lines coint
 
 * snippets
 https://sed.sourceforge.io/#scripts
-|--------------------+-------------------------------------------------------------------------------|
-| $=                 | prints the number of lines (slow?)                                            |
-| =;n                | interleaves printing the number of line every 2 numbers (1,3..) and each line |
-| 2d                 | delete line 2                                                                 |
-| /^ /d              | filters out lines starting with space                                         |
-| /^ *$/d            | filters out lines containing only spaces                                      |
-| s/.*/Hello/;q      | reads 1st line of input and prints "Hello"                                    |
-| /needle/d          | deletes lines containing "needle"                                             |
-| s/needle//g        | deletes "needle" from lines                                                   |
-| 50,$d              | deletes from line 50 to the end                                               |
-| 1,/^$/d            | deletes from 1st line to the first blank line                                 |
-| /---/!s/--/\\(em/g | on all lines that do not have 3(-), replace 2(-)                              |
-| s/.$//             | dos2unix, aka CRLF to LF                                                      |
-|--------------------+-------------------------------------------------------------------------------|
+|-----------------------+------------+-------------------------------------------------------------------------------|
+| $=                    |            | prints the number of lines (slow?)                                            |
+| =;n                   |            | interleaves printing the number of line every 2 numbers (1,3..) and each line |
+| 1p                    | -n         | prints first line                                                             |
+| $p                    | -n         | prints last line                                                              |
+| 2d                    |            | delete line 2                                                                 |
+| 1i #Managed by sed    | /etc/hosts | adds comment to the /top/ of the input                                        |
+| $a 8.8.8.8 google.com | /etc/hosts | adds ip/hostname at the /end/ of the input                                    |
+| /^ /d                 |            | filters out lines starting with space                                         |
+| /^ *$/d               |            | filters out lines containing only spaces                                      |
+| s/.*/Hello/;q         |            | reads 1st line of input and prints "Hello"                                    |
+| /needle/d             |            | deletes lines containing "needle"                                             |
+| s/needle//g           |            | deletes "needle" from lines                                                   |
+| 50,$d                 |            | deletes from line 50 to the end                                               |
+| 1,/^$/d               |            | deletes from 1st line to the first blank line                                 |
+| /---/!s/--/\\(em/g    |            | on all lines that do not have 3(-), replace 2(-)                              |
+| s/.$//                |            | dos2unix, aka CRLF to LF                                                      |
+|-----------------------+------------+-------------------------------------------------------------------------------|
 #+TBLFM: $1=;n
 ** remove before (#)
   sed -i -n '/#/,$p' file.txt
