--- a/scm/git.org
+++ b/scm/git.org
@@ -1,3 +1,13 @@
+- tutorial
+  http://jwiegley.github.io/git-from-the-bottom-up/
+  https://github.com/jwiegley/git-from-the-bottom-up
+
+- diy
+  - https://stefan.saasen.me/articles/git-clone-in-haskell-from-the-bottom-up/
+  - https://vaibhavsagar.com/blog/2017/08/13/i-haskell-a-git/
+
+- article 17 | magit https://emacsair.me/2017/09/01/magit-walk-through/
+- https://github.com/k88hudson/git-flight-rules
 - https://blog.scottlowe.org/2023/12/15/conditional-git-configuration/
 - workflow https://sethrobertson.github.io/GitFixUm/fixup.html
 - book Pro Git https://git-scm.com/book/en/v2/Git-Internals-Git-Objects
@@ -13,6 +23,8 @@
   ~magit-log-buffer-file~, view log for file
 - git-gutter-fringe font
   https://ianyepan.github.io/posts/emacs-git-gutter/
+
+- video: Git just say no https://www.youtube.com/watch?v=ghtpJnrdgbo
 - Video:  Advanced Git: Graphs, Hashes, and Compression, Oh My!
   https://www.youtube.com/watch?v=ig5E8CcdM9g
 - Video:  Git From the Bits Up
@@ -20,6 +32,7 @@
 - Github Action
   https://simonwillison.net/2020/Oct/9/git-scraping/
   https://news.ycombinator.com/item?id=37082289
+
 * Github Altenatives
 - Gitlab
 - Bitbucket
