--- a/languages/sql/sqlite/articles.org
+++ b/languages/sql/sqlite/articles.org
@@ -3,12 +3,10 @@
 - article 22 https://www.twilio.com/en-us/blog/sqlite-postgresql-complicated
 - article 22 https://muratbuffalo.blogspot.com/2022/09/sqlite-past-present-and-future.html
 - article 21 https://avi.im/blag/2021/fast-sqlite-inserts/
-- article 21
-  https://phiresky.github.io/blog/2021/hosting-sqlite-databases-on-github-pages/
-  https://news.ycombinator.com/item?id=28015980
 - article 21 https://antonz.org/sqlite-is-not-a-toy-database/
 - article 21 https://unixdigest.com/articles/sqlite-the-only-database-you-will-ever-need-in-most-cases.html
 - article 21 https://blog.wesleyac.com/posts/consider-sqlite
+- article 20 https://phiresky.github.io/blog/2020/sqlite-performance-tuning/
 - article 21 https://jlongster.com/future-sql-web
 - article 17 https://tech.marksblogg.com/sqlite3-tutorial-and-guide.html
 - article 16 https://charlesleifer.com/blog/five-reasons-you-should-use-sqlite-in-2016/
